fix: space gap buttons disabled

--- a/src/components/Invoice/InvoicesList/style.module.css
+++ b/src/components/Invoice/InvoicesList/style.module.css
@@ -35,7 +35,7 @@ html {
 tr {
   white-space: nowrap;
 }
-tr a + button {
+tr a + button, tr span + span {
   margin-left: 8px;
 }
 
